--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,7 +50,8 @@ dependencies:
   flutter_easyloading: ^3.0.3
   http:
   shared_preferences: ^2.0.9
-  esc_pos_bluetooth: ^0.4.1
+  #esc_pos_bluetooth: ^0.4.1
+  bluetooth_print: ^3.0.0
 
 
   #f_logs: ^2.0.0
@@ -65,7 +66,7 @@ dev_dependencies:
     sdk: flutter
 
 flutter_icons:
-  image_path: "assets/images/appIcon.jpg"
+  image_path: "assets/images/appicon.jpg"
   android: true
   ios: true
   # The "flutter_lints" package below contains a set of recommended lints to
